# beetlesense-platform

./: .deploy-trigger  .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .lighthouserc.js  .lighthouserc.json  AGENTS.md  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
.claude/: agent-teams.md  launch.json
.github/: dependabot.yml
apps/inference/: Dockerfile  pyproject.toml
apps/inference/src/: __init__.py  config.py  main.py
apps/inference/src/models/: __init__.py  base.py  registry.py
apps/inference/src/models/modules/: __init__.py  animal_inventory.py  beetle_detection.py  boar_damage.py  module_6.py  species_id.py  tree_count.py  vision_search.py
apps/inference/src/processing/: __init__.py  geo_utils.py  spectral.py  tiling.py
apps/inference/src/tests/: __init__.py  test_modules.py
data/: knowledge-base-sources.json
docs/: API_DOCS.md  ARCHITECTURE.md  DEPLOY.md  PRD_STORE_NAV_v1.0.md  PRD_v2.1.md  PRD_v2.2.md  PRD_v2.3.md  PRD_v2.7.md  ROADMAP.md  SECURITY_CHECKLIST.md  SETUP_ANALYTICS.md  SPRINT_1_FOUNDATION.md  SPRINT_2_DATA_PIPELINE.md  SPRINT_3F_FRONTEND.md  SPRINT_3_AI_ML_MODULES.md  SPRINT_5_PORTALS_REPORTS.md  SWOT_v2.7.md  USER_GUIDE.md  analytics.md  annotated-prd.md  competitive-analysis.md  critical-journey.md  error-codes.md  improvement-backlog.md  kpis.md  personas.md  schema.md  screen-states.md  swot.md
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml
scripts/: bootstrap-hq.sh  generate-embeddings.ts  generate-icons.mjs  pre-run-tag.sh  seed-knowledge-base.ts
(+1306 files in other folders)
